Bug 91362 - libinput 0.20: thumb detection too aggressive
Summary: libinput 0.20: thumb detection too aggressive
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-16 18:36 UTC by Jan Alexander Steffens (heftig)
Modified: 2015-07-26 23:31 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Moving my finger across the center of the pad. No cursor movement. (19.68 KB, text/plain)
2015-07-16 18:36 UTC, Jan Alexander Steffens (heftig)
Details
Moving my finger across the center of the pad, pressing down to click. No cursor movement. (26.22 KB, text/plain)
2015-07-16 18:37 UTC, Jan Alexander Steffens (heftig)
Details
Some actual thumb and palm touches (86.25 KB, text/plain)
2015-07-16 18:44 UTC, Jan Alexander Steffens (heftig)
Details
Normal drag movement that triggers palm/thumb detection when it shouldn't (133.56 KB, text/plain)
2015-07-21 14:23 UTC, Max Bruckner
Details

Description Jan Alexander Steffens (heftig) 2015-07-16 18:36:29 UTC
Created attachment 117177 [details]
Moving my finger across the center of the pad. No cursor movement.

Thumb detection seems way too aggressive. It's very easy to trigger, especially when needing to drag (pressing hard enough to click).

The pad suppresses most input unless I hold my finger perpendicular or carefully use only light touches.

libinput 0.20.0
xf86-input-libinput 0.12.0
Comment 1 Jan Alexander Steffens (heftig) 2015-07-16 18:37:59 UTC
Created attachment 117178 [details]
Moving my finger across the center of the pad, pressing down to click. No cursor movement.

Oh, and the hardware is a Clevo W740SU.
Comment 2 Jan Alexander Steffens (heftig) 2015-07-16 18:44:44 UTC
Created attachment 117179 [details]
Some actual thumb and palm touches
Comment 3 Jan Alexander Steffens (heftig) 2015-07-16 21:28:27 UTC
Touchpad physical size is about 105x64mm.
Comment 4 Max Bruckner 2015-07-21 14:21:09 UTC
Same thing herre, also Cleve W740SU.

I bisected this to commit "3dcf28b919ae598506852b408829a6627168e803 touchapd: add pressure-based thumb detection"

Mostly happens when dragging. But slightly changing the angle for normal finger movements also triggers this.
Comment 5 Max Bruckner 2015-07-21 14:23:34 UTC
Created attachment 117275 [details]
Normal drag movement that triggers palm/thumb detection when it shouldn't
Comment 7 Max Bruckner 2015-07-22 17:42:34 UTC
This patch series fixes the false positives of the thumb detection but the behaviour is nearly the same as disabling the thumb/palm detection completely.

That's still way better behaviour than the mouse pointer unexpectedly locking up.

An issue that I encountered though was that the two finger scrolling stopped working.
Comment 8 Peter Hutterer 2015-07-26 23:31:28 UTC
marking it as closed because we merged it, can you please file a separate one for the scroll issue? Thanks.

And yes, it's nearly the same as disabling thumb detection (note that palm detection is independent), but it still triggers in a few cases, the ones where it's most likely to have a thumb resting. without better data from touchpads, I'm not sure we can do anything much better.


commit 988f31fc4a7a6c7d0b6e20f77ea7093afd0ef37a
Merge: 5571f2d 2c78149
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Jul 24 09:19:08 2015 +1000

    Merge branch 'thumb-detect-improvements'


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.