test/touchpad.c
@@ -4017,7 +4017,7 @@ START_TEST(touchpad_thumb_begin_no_motion)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4041,7 +4041,7 @@ START_TEST(touchpad_thumb_update_no_motion)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4071,7 +4071,7 @@ START_TEST(touchpad_thumb_clickfinger)
 	struct libinput_event *event;
 	struct libinput_event_pointer *ptrev;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4128,7 +4128,7 @@ START_TEST(touchpad_thumb_btnarea)
 	struct libinput_event *event;
 	struct libinput_event_pointer *ptrev;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4164,7 +4164,7 @@ START_TEST(touchpad_thumb_edgescroll)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4195,7 +4195,7 @@ START_TEST(touchpad_thumb_tap_begin)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4225,7 +4225,7 @@ START_TEST(touchpad_thumb_tap_touch)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4255,7 +4255,7 @@ START_TEST(touchpad_thumb_tap_hold)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4286,7 +4286,7 @@ START_TEST(touchpad_thumb_tap_hold_2ndfg)
 	struct litest_device *dev = litest_current_device();
 	struct libinput *li = dev->libinput;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
@@ -4333,7 +4333,7 @@ START_TEST(touchpad_thumb_tap_hold_2ndfg_tap)
 	struct libinput_event *event;
 	struct libinput_event_pointer *ptrev;
 	struct axis_replacement axes[] = {
-		{ ABS_MT_PRESSURE, 100 },
+		{ ABS_MT_PRESSURE, 190 },
 		{ -1, 0 }
 	};
 
